refactor(fix-error): 수익 출력 시 순서 유지 수정
수익이 출력될 때 순서가 유지될 수 있게 수정했습니다.